force-app/main/default/objects/Lilly_Upcoming_Events__c/Lilly_Upcoming_Events__c.object-meta.xml
<CustomObject>
    <label>Upcoming Events</label>
    <nameField>
        <label>Upcoming Events Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Upcoming Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>