force-app/main/default/objects/Lilly_Upcoming_Events__c/fields/Lilly_City__c.field-meta.xml
<CustomField>
    <fullName>Lilly_City__c</fullName>
    <label>City</label>
    <length>25</length>
    <type>Text</type>
</CustomField>