force-app/main/default/objects/Lilly_Upcoming_Events__c/fields/Lilly_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Event_Date__c</fullName>
    <label>Event Date</label>
    <type>DateTime</type>
</CustomField>