force-app/main/default/objects/Lilly_Upcoming_Events__c/fields/Lilly_Role__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>speaker</fullName>
            </value>
            <value>
                <fullName>co-speaker</fullName>
            </value>
            <value>
                <fullName>attendee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>