force-app/main/default/objects/Lilly_Upcoming_Events__c/fields/Lilly_State__c.field-meta.xml
<CustomField>
    <fullName>Lilly_State__c</fullName>
    <label>State</label>
    <length>25</length>
    <type>Text</type>
</CustomField>