force-app/main/default/objects/Lilly_Upcoming_Events__c/fields/OfflineCreateByID__c.field-meta.xml
<CustomField>
    <fullName>OfflineCreateByID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offline Create By ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Upcoming_Events</relationshipName>
    <type>Lookup</type>
</CustomField>