force-app/main/default/objects/Lilly_Upcoming_Events__c/fields/OfflineCreateDate__c.field-meta.xml
<CustomField>
    <fullName>OfflineCreateDate__c</fullName>
    <label>Offline Create Date</label>
    <type>DateTime</type>
</CustomField>